<resources>
    <string name="app_name">MathApp</string>

    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="user_email" translatable="false">Email(example@gmail.com)</string>
    <string name="user_password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="user_login_button">Login</string>
    <string name="registration">Create an account</string>
    <string name="first_name">Name</string>
    <string name="recover_password">Login</string>
    <string name="forgot_password">Recovery</string>
    <string name="empty_fields">Fields cannot be empty</string>
    <string name="wrong_data">Wrong data format</string>
    <string name="invalid_login_password">Invalid login or password</string>
    <string name="success_login_in">Successfully logged in</string>
    <string name="correct_input">Correctly</string>
    <string name="wrong_data_format">Wrong data format (example213@gmail.com)</string>
    <string name="wrong_data_format1">Incorrect format of the entered data</string>
    <string name="fields_must_be_completed">All fields must be completed</string>
    <string name="match_passwords">The passwords do not match</string>
    <string name="email_already_used">This e-mail is already in use</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="name_validation">The name should start with Upper-case without special charakters</string>
    <string name="password_validation">The password should contain from 12 to 64 characters, including one special character</string>

    <!-- Main Page -->
    <string name="study">Study</string>
    <string name="options">Options</string>
    <string name="challenge">Challenge</string>

    <!--User Options -->
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>

    <!-- Change Password -->
    <string name="change_password1">Change password</string>
    <string name="change_password2">Change password</string>
    <string name="new_password">New password</string>

    <string name="logo" translatable="false">Logo</string>
    <string name="start">Begin</string>
    <string name="start_description" translatable="false">Tu będzie opis.</string>
    <string name="result">Result</string>

    <string name="Test">Test</string>
    <string name="summary">Quiz summary</string>
    <string name="points_scored">Points scored</string>
    <string name="time_spent">Time spent</string>
    <string name="minute">min</string>
    <string name="second">sec</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="easy">Easy</string>
    <string name="difficult">Difficult</string>
    <string name="select_the_difficulty_level">Select the difficulty level</string>
    <string name="select_a_module">Select a module</string>
    <string name="select_module">Select a module to learn</string>
    <string name="final_exam_of_the_module">Final exam of the module</string>
    <string name="quiz_settings">Quiz settings</string>
    <string name="text_information_about_delay_time">This option allows you to freeze the time at the value in seconds specified above. This time will be stopped after selecting the answer in the quiz.</string>
    <string name="rankings">Rankings</string>
    <string name="list_position">Lp.</string>
    <string name="points">Points</string>
    <string name="level">Lvl.</string>
    <string name="main_page">Home</string>


</resources>