<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".rankings.RankingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:gravity="center"
        android:textSize="25dp"
        android:padding="10dp"
        android:text="@string/rankings"
        android:background="#E4731B"
        />

    <Spinner
        android:id="@+id/spinner_ranks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_gray2"
        android:backgroundTint="@color/white"

        />

    <Spinner
        android:visibility="gone"
        android:id="@+id/spinner_ranks_modules"
        android:background="@color/main_gray2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:visibility="gone"
        android:id="@+id/spinner_ranks_difficulty"
        android:background="@color/main_gray1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:background="#E4731B"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="17dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/list_position"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="5"
                android:textSize="17dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="17dp"
                android:layout_height="wrap_content"
                android:text="@string/points"
                />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_rankings_activity"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>