<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF3C3C3A"
    tools:context=".authentication.LoginActivity">
<!--android:background="#F1EEEE"-->


    <ImageView
        android:id="@+id/image_logo_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#E4731B"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ffbd59"
        android:layout_marginBottom="50dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="#878783"
        android:textColor="@color/black"
        android:background="#63635E"
        android:hint="@string/user_email"
        android:maxLines="1"
        android:singleLine="true" />
    <TextView
        android:id="@+id/checkUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/user_password"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#63635E"
            android:hint="@string/user_password"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#878783" />

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_baseline_remove_red_eye_24" />


    </RelativeLayout>



    <TextView
        android:id="@+id/checkUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
    >
        <TextView

            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="18dp"

            />
        <TextView
            android:id="@+id/registration"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="18dp"
            android:textColor="#AAA7A7"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            />

    </LinearLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/user_login_button"
        android:textColor="#F1EEEE"
        android:background="#E4731B"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

</LinearLayout>