<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF3C3C3A"
    tools:context=".authentication.RegistrationActivity">

    <ImageView
        android:id="@+id/image_logo_registration_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:textColor="#E4731B"
        android:text="@string/registration"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ffbd59"
        android:layout_marginBottom="50dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="@string/email"
        />
    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="#878783"
        android:textColor="@color/black"
        android:background="#63635E"
        android:hint="@string/user_email"
        />
    <TextView
        android:id="@+id/checkInputUserData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="@string/user_password"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#63635E"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#878783" />

        <ImageView
            android:id="@+id/show_password_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_baseline_remove_red_eye_24" />

    </RelativeLayout>


    <TextView
        android:id="@+id/checkInputUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="@string/repeat_password"
        />

    <EditText
        android:id="@+id/repeat_user_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#63635E"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:enabled="false"
        android:textColorHint="#878783" />

    <TextView
        android:id="@+id/checkInputUserRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="@string/first_name"
        />
    <EditText
        android:id="@+id/user_first_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:maxLines="1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColorHint="#878783"
        android:textColor="@color/black"
        android:background="#63635E"
        android:singleLine="true"
        android:hint="@string/first_name"

        />
    <TextView
        android:id="@+id/checkInputUserFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <Button
        android:background="#E4731B"
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/registration"

        />


</LinearLayout>